装饰器模式模块创建

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>builder-design</module>
+        <module>decorator-pattern</module>
     </modules>
 
     <properties>
